Archive2/7c/7e2b564c2e6686/output
main.cpp: In member function 'Object::Proxy& Object::Proxy::operator=(const Object::Proxy&)':
main.cpp:70:54: error: 'const class Object::Proxy' has no member named 'p'
             PyObject_SetItem( container, key, rhs_ob.p );
                                                      ^
